# gemma-3-test

./: README.md
gemma-backend/: main.py  pyproject.toml  server.py
gemma-frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.mjs
gemma-frontend/src/app/: globals.css  layout.tsx  page.tsx
gemma-frontend/src/components/: ChatBubble.tsx  ChatHistory.tsx  MessageInput.tsx  SettingsPanel.tsx  SliderControl.tsx  Welcome.tsx
gemma-frontend/src/utility/: hyperparamPresets.ts
